# EDIpack

./: .gitignore  CMakeLists.txt  README.md  distclean.cmake  meson.build  pyproject.toml  setup.py
cmake/: GitConfig.cmake  PostConfig.cmake  distclean.cmake
cmake/Modules/: FindMKL.cmake  HomeInstall.cmake  PostBuildLibrary.cmake
etc/: edipack.pc.in  lanc_ed.pc
etc/environment_modules/: module  module.in
python/: __init__.py  edi2py.py
python/edipy/: __init__.py
python/lancpy/: __init__.py
src/: AUX_FUNX.f90  CMakeLists.txt  EDIpack.f90  ED_AUX_FUNX.f90  ED_EIGENSPACE.f90  ED_INPUT_VARS.f90  ED_MAIN.f90  ED_OBSERVABLES.f90  ED_SECTOR.f90  ED_SETUP.f90  ED_SPARSE_MATRIX.f90  ED_VARS_GLOBAL.f90  ED_VERSION.f90  EIGENSPACE.f90  INPUT_VARS.f90  LANC_ED.f90  MAIN.f90  OBSERVABLES.f90  SETUP.f90  VARS_GLOBAL.f90  VERSION.f90  revision.in
src/BATH/: BATH.f90  BATH_FIT.f90  BATH_FUNCTIONS.f90  CMakeLists.txt  FIT_COMMON.f90  FIT_HYBRID.f90  FIT_NORMAL.f90  FIT_REPLICA.f90  fitgf_normal_normal.f90  fitgf_replica.f90
src/CHI/: CHI_DENS.f90  CHI_EXCT.f90  CHI_FUNCTIONS.f90  CHI_PAIR.f90  CHI_SPIN.f90  CMakeLists.txt
src/DIAG/: CMakeLists.txt  DIAG.f90  HAMILTONIAN.f90  HAMILTONIAN_COMMON.f90  HAMILTONIAN_DIRECT_HxV.f90  HAMILTONIAN_STORED_HxV.f90
src/DIAG/direct/: HxV_dw.f90  HxV_non_local.f90
src/DIAG/direct/Orbs/: HxV_local.f90  HxV_up.f90
src/DIAG/direct_mpi/: HxV_local.f90  HxV_non_local.f90  HxV_up.f90
src/DIAG/direct_mpi/Orbs/: HxV_eph.f90  HxV_up.f90
src/DIAG/stored/: H_dw.f90  H_e_ph.f90  H_local.f90  H_non_local.f90  H_up.f90
src/DIAG/stored/Orbs/: H_dw.f90  H_local.f90  H_ph.f90  H_up.f90
src/ED_BATH/: CMakeLists.txt  ED_BATH.f90  ED_BATH_FIT.f90  ED_BATH_FUNCTIONS.f90  ED_HLOC_DECOMPOSITION.f90  dmft_aux.f90  fitgf_hybrid_normal.f90  fitgf_normal_normal.f90  fitgf_replica.f90  user_aux.f90  user_ctrl.f90
src/ED_CHI/: CMakeLists.txt  ED_CHI_DENS.f90  ED_CHI_EXCT.f90  ED_CHI_FUNCTIONS.f90  ED_CHI_PAIR.f90  ED_CHI_SPIN.f90
src/ED_DIAG/: CMakeLists.txt  ED_DIAG.f90  ED_HAMILTONIAN.f90  ED_HAMILTONIAN_COMMON.f90  ED_HAMILTONIAN_DIRECT_HxV.f90  ED_HAMILTONIAN_SPARSE_HxV.f90  diag_hybr_bath.f90
src/ED_DIAG/direct/: HxV_eph.f90  HxV_local.f90  HxV_ph.f90  HxV_up.f90
src/ED_DIAG/direct/Orbs/: HxV_dw.f90  HxV_eph.f90
src/ED_DIAG/direct_mpi/: HxV_dw.f90  HxV_eph.f90
src/ED_DIAG/direct_mpi/Orbs/: HxV_dw.f90  HxV_local.f90  HxV_ph.f90
src/ED_DIAG/stored/: H_non_local.f90
src/ED_DIAG/stored/Orbs/: H_e_ph.f90
src/ED_GF/: CMakeLists.txt  ED_GF_ELECTRON.f90  ED_GF_PHONON.f90  ED_GREENS_FUNCTIONS.f90
src/ED_IO/: CMakeLists.txt  ED_IO.f90  get_dens.f90  get_docc.f90  get_doubles.f90  get_eimp.f90  get_g0imp.f90  get_gimp.f90  get_imp_dm.f90  get_mag.f90  get_obs.f90  get_sigma.f90
src/GF/: CMakeLists.txt  GF_ELECTRON.f90  GF_PHONON.f90  GREENS_FUNCTIONS.f90
src/IO/: CMakeLists.txt  IO.f90  get_gand_bath.f90  get_gimp.f90  get_obs.f90
src/ed2py/: ed2py.f90  ed2py_aux_funx.h90  ed2py_bath.h90  ed2py_hloc_decomposition.h90  ed2py_io.h90
src/edi2py/: edi2py.f90  edi2py_aux_funx.f90  edi2py_aux_funx.h90  edi2py_bath.f90  edi2py_bath.h90  edi2py_bath_fit.f90  edi2py_bath_fit.h90  edi2py_hloc_decomposition.h90  edi2py_input.h90  edi2py_io.f90  edi2py_io.h90  edi2py_main.f90  edi2py_main.h90  edi2py_read_input.f90
test/fortran/: Makefile.in  hm_bethe.f90  inputED.conf
test/python/: hamiltonian.restart  hm_bethe.py  inputED.conf
