# # DMFT_ED library
FILE(GLOB ED_INIT_SRC
  ED_SPARSE_MATRIX.f90
  ED_VARS_GLOBAL.f90
  ED_INPUT_VARS.f90
  ED_AUX_FUNX.f90
  ED_SECTOR.f90
  ED_SETUP.f90
  ED_EIGENSPACE.f90
  )
ADD_LIBRARY(ED_INIT_LIB OBJECT ${ED_INIT_SRC})




FILE(GLOB ED_GLOB_SRC
  ED_OBSERVABLES.f90
  ED_MAIN.f90
  LANC_ED.f90
  )
ADD_LIBRARY(ED_GLOB_LIB OBJECT ${ED_GLOB_SRC})
