#Generate version module:
CONFIGURE_FILE(${LIB_SRC}/revision.in ${LIB_SRC}/VERSION.f90 @ONLY)

FILE(GLOB INIT_SRC
  VERSION.f90
  SPARSE_MATRIX.f90
  VARS_GLOBAL.f90
  INPUT_VARS.f90
  AUX_FUNX.f90
  SECTOR.f90
  SETUP.f90
  EIGENSPACE.f90
  )
ADD_LIBRARY(INIT_LIB OBJECT ${INIT_SRC})




FILE(GLOB GLOB_SRC
  OBSERVABLES.f90
  MAIN.f90
  EDIpack.f90
  )
ADD_LIBRARY(GLOB_LIB OBJECT ${GLOB_SRC})
